<resources>
    <string name="app_name">Skyline</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="review">Review</string>
    <string name="place_name">Place name</string>
    <string name="confirm">Confirm</string>
    <string name="location_details">Location Details</string>
    <string name="add_location">Add Location</string>
    <string name="send">Send</string>
    <string name="leave_your_review">Leave your review</string>
    <string name="location_created_by">Location created by</string>
    <string name="total_rating">Total rating</string>
    <string name="your_rating">Your rating</string>
</resources>
